heatmap code with basic transition and hover
Added heatmap code, ability to show per capita, by country. Basic transition and hover added.

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,11 @@
 .link:hover {
   stroke-opacity: .5;
 }
+
+.heatmap_rect_names {
+	font-size: xx-small;
+	stroke-width: 0.5px;
+	stroke: mediumblue;
+
+
+}
