--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ html {
 	margin-top: 0px;
 	margin-left: 50px;
     align-content: right;
+    font-size: small;
 }
 
 .section-title {
@@ -151,4 +152,9 @@ html {
     text-align: center;
     margin-bottom: 20px;
 
+}
+
+
+#yearSliderLabel {
+    font-size: small;
 }
