gauge vis refresh and checkbox data capture added. needs wrangle and update modularity

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,3 +229,14 @@ html {
     align-content: center;
     justify-content: center;
 }
+
+
+
+/*SOLUTION SECTION STYLES*/
+#btnGroup h4 {
+	font-family: Ayuthaya;
+}
+
+
+
+
