--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ html {
 
 .focused_heatmap {
     stroke: darkblue;
-    stroke-width: 4;
+    stroke-width: 6;
 }
 
 /*@media screen and (min-width: 600px) {*/
@@ -228,4 +228,9 @@ html {
     display: flex;
     align-content: center;
     justify-content: center;
+}
+
+#CategoryDiv {
+    font-size: small;
+
 }
