--- a/css/styles.css
+++ b/css/styles.css
@@ -198,12 +198,15 @@ html {
 .focused {
     stroke: darkblue;
     stroke-width: 2;
+    transition: stroke-width 4000ms;
+
     opacity: 1;
 }
-
 .focused_heatmap {
     stroke: darkblue;
     stroke-width: 6;
+    transition: stroke-width 4000ms;
+
 }
 
 /*@media screen and (min-width: 600px) {*/
