--- a/css/styles.css
+++ b/css/styles.css
@@ -247,5 +247,12 @@ html {
 }
 
 
+.btn {
+    border: 2px solid black;
+    background-color: white;
+    color: orange;
+    font-size: 12px;
+    cursor: pointer;
 
+}
 
