--- a/css/styles.css
+++ b/css/styles.css
@@ -247,12 +247,11 @@ html {
 }
 
 
-.btn {
+#play-button {
     border: 2px solid black;
     background-color: white;
     color: orange;
     font-size: 12px;
     cursor: pointer;
-
 }
 
