sankey displays percentages and color consistency between gauge and site

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,8 +121,14 @@ html {
   stroke-opacity: .2;
 }
 
+.link-negative {
+  fill: none;
+  stroke: "red";
+  stroke-opacity: .2;
+}
+
 .link:hover {
-  stroke-opacity: .5;
+  stroke-opacity: .35;
 }
 
 
