--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 /*Google Font Import*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap');
+@font-face {
+    font-family: 'Ayuthaya';
+    src: url('../static/fonts/Ayuthaya.ttf');
+}
 
 html {
     scroll-behavior: smooth;
